add and updated

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -6,10 +6,10 @@ header.header
 			ul.header-navigation-list
 				li.list-item-menu
 					a.link-menu.button(href="#")
-						|почему мы?
+						|Почему мы?
 				li.list-item-menu
 					a.link-menu.button(href="#")
-						|эксперты
+						|Эксперты
 				li.list-item-menu
 					a.link-menu.button(href="#")
 						|Услуги и цены
@@ -19,13 +19,17 @@ header.header
 		nav.header-navigation-mobile(data-ix="menu-mobile-load")
 			ul.header-navigation-list
 				li.list-item-menu
-					a.link-menu.button(href="#")Услуги и цены
+					a.link-menu.button(href="#")
+						|Услуги и цены
 				li.list-item-menu
-					a.link-menu.button(href="#")почему мы?
+					a.link-menu.button(href="#")
+						|Почему мы?
 				li.list-item-menu
-					a.link-menu.button(href="#")эксперты
+					a.link-menu.button(href="#")
+						|Эксперты
 				li.list-item-menu
-					a.link-menu.button(href="#")Контакты
+					a.link-menu.button(href="#")
+						|Контакты
 		a.full-phone-block(href="tel:+74951200977")
 			div.line-phone-block
 			div.phone-header
