--- a/src/jade/includes/section_about_us_01.jade
+++ b/src/jade/includes/section_about_us_01.jade
@@ -6,3 +6,24 @@
 			p.paragraph_st_text
 				|ООО Независимый Экспертный Центр «Триумф» с 2007 года занимается проверкой на полиграфе с гарантией качества и соблюдением сроков.
 		.content-block-st
+			.row.row-about-us
+				.col-sm-4.con-st
+					.block-number
+						.ci_text
+							|10
+						.ci_text_block
+							|ТОПОВЫХ ЭКСПЕРТОВ
+				.col-sm-4.con-st
+					.block-number
+						.ci_text
+							|5
+						.ci_text_block
+							|ОФИСОВ В МОСКВЕ
+				.col-sm-4.con-st
+					.block-number
+						.ci_text
+							|37.000
+						.ci_text_block
+							|ПРОВЕДЕННЫХ ПРОВЕРОК 
+							br
+							|НА ПОЛИГРАФЕ
