--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,3 +5,6 @@ html
 		include includes/header
 		include includes/section_hero
 		include includes/section_about_us_01
+		include includes/section_about_us_02
+		include includes/section_about_us_03
+		include includes/section_about_us_04
