--- a/assets/templates/studionions/css/main.css
+++ b/assets/templates/studionions/css/main.css
@@ -519,6 +519,7 @@ a:focus {
 .col-ip-1, .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-ip-2, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-ip-3, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-ip-4, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-ip-5, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-ip-6, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-ip-7, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-ip-8, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-ip-9, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-ip-10, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-ip-11, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-ip-12, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
+  width: 100%;
 }
 .col-ip-1, .col-ip-2, .col-ip-3, .col-ip-4, .col-ip-5, .col-ip-6, .col-ip-7, .col-ip-8, .col-ip-9, .col-ip-10, .col-ip-11, .col-ip-12 {
   float: left;
@@ -1454,17 +1455,30 @@ img {
   white-space: nowrap;
 }
 .slider .slide {
-  position: relative;
   display: inline-block;
   vertical-align: top;
   width: 100%;
   height: 100%;
   white-space: normal;
   text-align: left;
+  position: relative;
+  height: auto;
 }
 .slider .slide-row {
   position: relative;
   height: auto;
+}
+@media (max-width: 991px) {
+  .slider .slide-row {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .slider .slide-row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 .slider .slide-intro {
   position: absolute;
@@ -1488,6 +1502,20 @@ img {
   flex-direction: column;
   border-radius: 4px;
   background-color: #4a6fbe;
+}
+@media (max-width: 991px) {
+  .slider .slide-intro {
+    height: 340px;
+    max-height: 340px;
+  }
+}
+@media (max-width: 767px) {
+  .slider .slide-intro {
+    position: relative;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+  }
 }
 .slider .slide-h2 {
   max-width: 460px;
@@ -1556,6 +1584,21 @@ img {
   -ms-flex-align: start;
   align-items: flex-start;
 }
+@media (max-width: 991px) {
+  .slider .col-slide-left {
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -moz-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+  }
+}
+@media (max-width: 767px) {
+  .slider .col-slide-left {
+    height: 320px;
+    max-height: 320px;
+  }
+}
 .slider .col-slide-right {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1575,6 +1618,12 @@ img {
   -moz-box-align: end;
   -ms-flex-align: end;
   align-items: flex-end;
+}
+@media (max-width: 767px) {
+  .slider .col-slide-right {
+    display: none;
+    height: 360px;
+  }
 }
 .slider .col-slide-right .slide-background {
   position: absolute;
@@ -1940,6 +1989,26 @@ img {
   -ms-flex-align: start;
   align-items: flex-start;
 }
+@media (max-width: 991px) {
+  .section-hero .block-name-heading {
+    height: auto;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .section-hero .block-name-heading {
+    padding-right: 0px;
+    padding-left: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
 .section-hero .block-slider {
   position: relative;
   overflow: hidden;
@@ -1948,6 +2017,19 @@ img {
   margin-right: auto;
   margin-left: auto;
   padding-top: 40px;
+}
+@media (max-width: 991px) {
+  .section-hero .block-slider {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .section-hero .block-slider {
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 .section-hero .blockdes {
   height: auto;
@@ -2021,9 +2103,212 @@ img {
     font-size: 25px;
   }
 }
+.h2-black {
+  position: relative;
+  z-index: 10;
+  max-width: 660px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-size: 22px;
+  line-height: 1.2em;
+  font-weight: 500;
+  letter-spacing: 0.6px;
+  text-transform: none;
+}
+@media (max-width: 991px) {
+  .h2-black {
+    max-width: 540px;
+    margin-bottom: 20px;
+    font-size: 18px;
+  }
+}
 .section-about-us {
   width: 100%;
   height: auto;
+}
+.section-about-us .content-block-st {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+.section-about-us .row-about-us {
+  position: relative;
+  margin-bottom: 10px;
+  margin-left: -5px;
+  margin-right: -5px;
+}
+.section-about-us .row-block-text {
+  margin-left: 0px;
+  margin-right: 0px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: auto;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -moz-box-orient: horizontal;
+  -moz-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+.section-about-us .con-st {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+@media (max-width: 767px) {
+  .section-about-us .con-st {
+    margin-top: 10px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .section-about-us .con-st:first-child {
+    margin-top: 0px;
+  }
+}
+.section-about-us .con-block-text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: auto;
+  padding: 40px 30px 20px 40px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #fff;
+  color: #595d79;
+}
+.section-about-us .con-block-text .heading-block-text {
+  position: relative;
+  margin-bottom: 10px;
+}
+.section-about-us .con-block-text .paragraph_st_cont {
+  width: auto;
+  max-width: 500px;
+  margin-bottom: 40px;
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-size: 16px;
+  line-height: 1.6em;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+@media (max-width: 991px) {
+  .section-about-us .con-block-text .paragraph_st_cont {
+    max-width: 100%;
+    font-size: 16px;
+  }
+}
+@media (max-width: 991px) {
+  .section-about-us .con-block-text {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -moz-box-flex: 0;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+  }
+}
+.section-about-us .con-block-photo {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: auto;
+  padding-right: 0px;
+  padding-left: 0px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.section-about-us .con-block-photo.right {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+  -moz-box-ordinal-group: 0;
+  -ms-flex-order: -1;
+  order: -1;
+}
+.section-about-us .con-block-photo-item {
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 300px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+@media (max-width: 991px) {
+  .section-about-us .con-block-photo {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  .section-about-us .con-block-photo {
+    display: none;
+  }
+}
+.section-about-us .block-number {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 260px;
+  padding: 60px 20px 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #434869;
+}
+.section-about-us .block-number .ci_text {
+  margin-bottom: 20px;
+  font-family: HelveticaNeueCyr, sans-serif;
+  color: #4266c2;
+  font-size: 60px;
+  line-height: 1em;
+  font-weight: 200;
+  text-align: center;
+}
+.section-about-us .block-number .ci_text_block {
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-size: 15px;
+  line-height: 1.2em;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
 }
 .block-cent-auto {
   width: 100%;
@@ -2032,6 +2317,12 @@ img {
   margin-right: auto;
   margin-left: auto;
   padding: 20px 40px 60px;
+}
+.block-cent-auto.no {
+  max-width: 2560px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
 }
 .block-name-section {
   display: -webkit-box;
@@ -2061,6 +2352,58 @@ img {
   -ms-flex-align: center;
   align-items: center;
   color: #595d79;
+}
+.block-expert-full {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: linear-gradient(180deg, rgba(65, 68, 88, 0.9), rgba(65, 68, 88, 0.9)), url('/assets/templates/studionions/images/background_sertificate.jpg');
+  background-position: 0px 0px, 0px 0px;
+  background-size: auto, 1280px;
+  background-attachment: scroll, fixed;
+}
+.block-expert-full .content-expert {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: auto;
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
 }
 .paragraph_st_text {
   max-width: 660px;
