--- a/src/less/section_about_us.less
+++ b/src/less/section_about_us.less
@@ -1,8 +1,155 @@
+.h2-black {
+	position: relative;
+	z-index: 10;
+	max-width: 660px;
+	margin-top: 0px;
+	margin-bottom: 10px;
+	font-family: HelveticaNeueCyr, sans-serif;
+	font-size: 22px;
+	line-height: 1.2em;
+	font-weight: 500;
+	letter-spacing: 0.6px;
+	text-transform: none;
+	@media (max-width: 991px){
+		max-width: 540px;
+		margin-bottom: 20px;
+		font-size: 18px;
+	}
+}
 .section {
 	&-about {
 		&-us {
 			width: 100%;
 			height: auto;
+			.content {
+				&-block {
+					&-st {
+						width: 100%;
+						height: auto;
+						overflow: hidden;
+					}
+				}
+			}
+			.row {
+				&-about {
+					&-us {
+						position: relative;
+						margin-bottom: 10px;
+						margin-left: -5px;
+						margin-right: -5px;
+					}
+				}
+				&-block {
+					&-text {
+						margin-left: 0px;
+						margin-right: 0px;
+						display: flex;
+						width: 100%;
+						height: auto;
+						flex-direction: row;
+					}
+				}
+			}
+			.con {
+				&-st {
+					padding-left: 5px;
+					padding-right: 5px;
+					@media (max-width: 767px) {
+						margin-top: 10px;
+						padding-right: 0px;
+						padding-left: 0px;
+						&:first-child {
+							margin-top: 0px;
+						}
+					}
+				}
+				&-block {
+					&-text {
+						display: flex;
+						height: auto;
+						padding: 40px 30px 20px 40px;
+						flex-direction: column;
+						background-color: #fff;
+						color: #595d79;
+						.heading-block-text {
+							position: relative;
+							margin-bottom: 10px;
+						}
+						.paragraph_st_cont {
+							width: auto;
+							max-width: 500px;
+							margin-bottom: 40px;
+							font-family: HelveticaNeueCyr, sans-serif;
+							font-size: 16px;
+							line-height: 1.6em;
+							font-weight: 300;
+							letter-spacing: 1px;
+							@media (max-width: 991px){
+								max-width: 100%;
+								font-size: 16px;
+							}
+						}
+						@media (max-width: 991px){
+							flex: 0 auto;
+						}
+					}
+					&-photo {
+						display: flex;
+						height: auto;
+						padding-right: 0px;
+						padding-left: 0px;
+						flex-direction: column;
+						&.right {
+							order: -1;
+						}
+						&-item {
+							background-position: 50% 50%;
+							background-size: cover;
+							background-repeat: no-repeat;
+							min-height: 300px;
+							flex: 1;
+						}
+						@media (max-width: 991px){
+							display: none;
+						}
+						@media (max-width: 767px){
+							display: none;
+						}
+					}
+				}
+			}
+			.block-number {
+				display: flex;
+				width: 100%;
+				height: 260px;
+				padding: 60px 20px 20px;
+				flex-direction: column;
+				justify-content: flex-start;
+				align-items: center;
+				border-radius: 4px;
+				background-color: #fff;
+				color: #434869;
+				.ci {
+					&_text {
+						margin-bottom: 20px;
+						font-family: HelveticaNeueCyr, sans-serif;
+						color: #4266c2;
+						font-size: 60px;
+						line-height: 1em;
+						font-weight: 200;
+						text-align: center;
+						&_block {
+							font-family: HelveticaNeueCyr, sans-serif;
+							font-size: 15px;
+							line-height: 1.2em;
+							font-weight: 700;
+							text-align: center;
+							letter-spacing: 0.4px;
+							text-transform: uppercase;
+						}
+					}
+				}
+			}
 		}
 	}
 }
@@ -15,6 +162,12 @@
 			margin-right: auto;
 			margin-left: auto;
 			padding: 20px 40px 60px;
+			&.no {
+				max-width: 2560px;
+				padding-right: 0px;
+				padding-bottom: 0px;
+				padding-left: 0px;
+			}
 		}
 	}
 	&-name {
@@ -28,6 +181,34 @@
 			justify-content: center;
 			align-items: center;
 			color: #595d79;
+		}
+	}
+	&-expert {
+		&-full {
+			display: flex;
+			height: auto;
+			padding-right: 20px;
+			padding-left: 20px;
+			align-items: center;
+			background-image: linear-gradient(180deg, rgba(65, 68, 88, .9), rgba(65, 68, 88, .9)), url('/assets/templates/studionions/images/background_sertificate.jpg');
+			background-position: 0px 0px, 0px 0px;
+			background-size: auto, 1280px;
+			background-attachment: scroll, fixed;
+			.content-expert {
+				display: flex;
+				width: 100%;
+				height: auto;
+				max-width: 1600px;
+				margin-right: auto;
+				margin-left: auto;
+				padding-top: 40px;
+				padding-bottom: 40px;
+				flex-direction: column;
+				justify-content: flex-start;
+				align-items: center;
+				color: #fff;
+				text-align: center;
+			}
 		}
 	}
 }
