--- a/src/less/section_hero.less
+++ b/src/less/section_hero.less
@@ -25,6 +25,16 @@
 					flex-direction: row;
 					justify-content: space-between;
 					align-items: flex-start;
+					@media(max-width: 991px) {
+						height: auto;
+						padding-right: 0px;
+						padding-left: 0px;
+					}
+					@media(max-width: 767px) {
+						padding-right: 0px;
+						padding-left: 0px;
+						flex-direction: column;
+					}
 				}
 			}
 			&-slider {
@@ -35,6 +45,15 @@
 				margin-right: auto;
 				margin-left: auto;
 				padding-top: 40px;
+				@media(max-width: 991px) {
+					padding-right: 0px;
+					padding-left: 0px;
+				}
+				@media(max-width: 767px) {
+					padding-top: 0px;
+					padding-right: 0px;
+					padding-left: 0px;
+				}
 			}
 		}
 		.blockdes {
