--- a/src/jade/includes/section_about_us_04.jade
+++ b/src/jade/includes/section_about_us_04.jade
@@ -5,5 +5,88 @@
 				h3.h2-black
 					|Закажите профессиональную проверку у наших экспертов уже сегодня!
 				.slider-expert
-					
-				
+					.slick
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
+						.slick-item
+							.box-expert
+								.expert-photo
+									img.img-responsive.img-cricle.block-center(src="/assets/templates/studionions/images/photo_item_slick.jpg")
+								.expert-fio.text-center
+									h3.h3-fio
+										|Утенков Геннадий Геннадьевич
+									p.text-center
+										|Эксперт высшей категории.
+										br
+										|Судебный эксперт.
+								.expert-description
+									p
+										|Специализация: скрининг проверки, оружие, алмазы, грабеж караванов.
