--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,10 +1,12 @@
 @import "variables.less";
 @import "@{bower}bootstrap/less/normalize.less";
+@import "@{bower}slick-carousel/slick/slick.less";
 @import "mixins.less";
 @import "reset.less";
 @import "helvetica_neue.less";
 @import "h.less";
 @import "slider.less";
+@import "slider_expert.less";
 @import "header.less";
 @import "section_hero.less";
 @import "section_about_us.less";
