--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -2,3 +2,4 @@
 @import "mixins/grid-framework.less";
 @import "mixins/margin-padding.less";
 @import "mixins/text-utilites.less";
+@import "mixins/response.less";
