--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,3 +8,5 @@ html
 		include includes/section_about_us_02
 		include includes/section_about_us_03
 		include includes/section_about_us_04
+		script(type="text/javascript" src="/assets/templates/studionions/js/app.js")
+		script(type="text/javascript" src="/assets/templates/studionions/js/main.js")
